@@ -1,8 +1,9 @@
-** v4.03, xx.xx.2018**
+** v4.03, 11.12.2018**
 * Update new ChatBar position and size.
 * Removed Enhanced FriendsList. Get ProjectAzilroka.
 * Fix Keystone Info tooltip.
 * Added iLvL on ScrappingMachine & EquipFlyout Buttons.
+* Added Buff Reminder Module.
 
 ** v4.02, 21.11.2018**
 * Fixed an error in one of my ClassColor function. #38
